test/e2e/lazyxds/data/services/headless-svc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: headless-svc
  name: headless-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headless-svc
  template:
    metadata:
      labels:
        app: headless-svc
    spec:
      containers:
        - image: zhongfox/anyserver:v1
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 7000
              protocol: TCP
          env:
            - name: SERVICE
              value: headless-svc
            - name: HTTP_PORTS
              value: "7000"
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: headless-svc
  name: headless-svc
spec:
  clusterIP: None
  ports:
    - name: http-1
      port: 7000
      protocol: TCP
  selector:
    app: headless-svc
  type: ClusterIP
---
