test/e2e/lazyxds/data/services/web-svc-related.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-svc-related1
  name: web-svc-related1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-svc-related1
  template:
    metadata:
      labels:
        app: web-svc-related1
    spec:
      containers:
        - image: zhongfox/anyserver:v1
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 7011
              protocol: TCP
          env:
            - name: SERVICE
              value: web-svc-related1
            - name: HTTP_PORTS
              value: "7011"
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-svc-related1
  name: web-svc-related1
spec:
  ports:
    - name: http-1
      port: 7011
      protocol: TCP
  selector:
    app: web-svc-related1
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-svc-related2
  name: web-svc-related2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-svc-related2
  template:
    metadata:
      labels:
        app: web-svc-related2
    spec:
      containers:
        - image: zhongfox/anyserver:v1
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 7012
              protocol: TCP
          env:
            - name: SERVICE
              value: web-svc-related2
            - name: HTTP_PORTS
              value: "7012"
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-svc-related2
  name: web-svc-related2
spec:
  ports:
    - name: http-1
      port: 7012
      protocol: TCP
  selector:
    app: web-svc-related2
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-svc-related3
  name: web-svc-related3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-svc-related3
  template:
    metadata:
      labels:
        app: web-svc-related3
    spec:
      containers:
        - image: zhongfox/anyserver:v1
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 7000
              protocol: TCP
          env:
            - name: SERVICE
              value: web-svc-related3
            - name: HTTP_PORTS
              value: "7013"
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-svc-related3
  name: web-svc-related3
spec:
  ports:
    - name: http-1
      port: 7013
      protocol: TCP
  selector:
    app: web-svc-related3
  type: ClusterIP
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-svc-related
spec:
  hosts:
    - web-svc-related1.lazyxds-example.svc.cluster.local
  gateways:
    - mesh
    - istio-system/lazyxds-egress
  http:
    - match:
        - queryParams:
            user:
              exact: "user2"
      route:
        - destination:
            host: web-svc-related2.lazyxds-example.svc.cluster.local
            port:
              number: 7012
    - match:
        - queryParams:
            user:
              exact: "user3"
      route:
        - destination:
            host: web-svc-related3.lazyxds-example.svc.cluster.local
            port:
              number: 7013
    - route:
        - destination:
            host: web-svc-related1.lazyxds-example.svc.cluster.local
            port:
              number: 7011
---
